// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot of ExchangeRate 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": 100,
        "justifyContent": "center",
        "marginBottom": 16,
        "width": "100%",
      }
    }
  >
    <View
      aria-orientation="horizontal"
      style={
        Object {
          "backgroundColor": "#6366f1",
          "height": 1,
          "marginBottom": 40,
          "marginTop": 40,
          "width": "100%",
        }
      }
      thickness="1"
    />
    <View
      colorScheme="indigo.500"
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#06b6d4",
            "borderRadius": 2,
            "borderWidth": 1,
            "paddingBottom": 2,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 2,
          },
          Object {
            "backgroundColor": "white",
            "borderRadius": 14,
            "minWidth": "40%",
            "position": "absolute",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "backgroundColor": undefined,
            "color": "#6366f1",
            "fontFamily": undefined,
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 21,
            "textDecorationLine": undefined,
          }
        }
      >
        £1 = €0.23422
      </Text>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Snapshot of ExchangeRate in loading state 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": 100,
        "justifyContent": "center",
        "marginBottom": 16,
        "width": "100%",
      }
    }
  >
    <View
      aria-orientation="horizontal"
      style={
        Object {
          "backgroundColor": "#6366f1",
          "height": 1,
          "marginBottom": 40,
          "marginTop": 40,
          "width": "100%",
        }
      }
      thickness="1"
    />
    <View
      colorScheme="indigo.500"
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#06b6d4",
            "borderRadius": 2,
            "borderWidth": 1,
            "paddingBottom": 2,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 2,
          },
          Object {
            "backgroundColor": "white",
            "borderRadius": 14,
            "minWidth": "40%",
            "position": "absolute",
          },
        ]
      }
    >
      <ActivityIndicator
        accessibilityLabel="loading"
        accessible={true}
        color="#6366f1"
        size="small"
      />
    </View>
  </View>
</RNCSafeAreaProvider>
`;
